--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <div class="content" style="white-space:pre-line;white-space:pre-wrap;">
             늦어도 22년 12월 둘째주까지는 '포트폴리오'를 올리겠습니다.
             (내용을 채우는데 시간이 걸리고 있습니다... 내용을 고민하고, 또 고민하며 최대한 인연이 닿을수있도록 하고 싶은 바램입니다.)
+
+            <div>
+                
+                <a href="./working/index.html" style="color:#2f2f2f91;">작업중인 것 보러가기</a>
+            </div>
         </div>
 
     </div>
