home 사진 추가함

--- a/working/index.html
+++ b/working/index.html
@@ -75,7 +75,7 @@
                             class="fa-solid fa-n"></i></a>
                 </div>
 
-                <div class="home_img"><img src="asset/img/반명함.jpg" alt=""></div>
+                <div class="home_img"><img src="asset/img/me0.png" alt=""></div>
             </div>
         </section>
 
@@ -424,49 +424,69 @@
                     </div>
                     <div class="portfolio-details">
                         <ul>
-                            <li>
-                                <h4>version2</h4>
-
+                            <li class="portfolio-details hide-scrollbar">
+                                <div class="left">
+                                    <h4>version2</h4>
+                                    <div class="portfolio-details-view">
+                                        <div class="portfolio-details-view-img" title-attr="대시보드 페이지"><img src="./asset/img/craft2/1.png" alt=""></div>
+                                        <div class="portfolio-details-view-img" title-attr="아파트 상세정보 검색1"><img src="./asset/img/craft2/1.png" alt=""></div>
+                                        <div class="portfolio-details-view-img" title-attr="아파트 상세정보 검색2"><img src="./asset/img/craft2/2.png" alt=""></div>
+                                        <div class="portfolio-details-view-img" title-attr="로그인"><img src="./asset/img/craft2/3.png" alt=""></div>
+                                        <div class="portfolio-details-view-img" title-attr="회원가입"><img src="./asset/img/craft2/4.png" alt=""></div>
+                                        <div class="portfolio-details-view-img" title-attr="사용자 정보 수정(user 계정)"><img src="./asset/img/craft2/5.png" alt=""></div>
+                                        <div class="portfolio-details-view-img" title-attr="사용자 정보 수정(admin 계정)"><img src="./asset/img/craft2/6.png" alt=""></div>
+                                        <div class="portfolio-details-view-img" title-attr="xml data loading(공공데이터 포털 다운로드, 지연시 렉이 아님을 사용자에게 보여주기 위한 페이지)"><img src="./asset/img/craft2/7.png" alt=""></div>
+                                    </div>
+                                </div>
                                 
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                <div class="right">
+                                    <ul>
+                                        <li>
+                                            <h4>사용한 기술</h4>
+                                            <ol>
+                                                <i class="fa-regular fa-keyboard portfolio-icon"></i>
 
-                                    <div class="portfolio-item-text">
-                                        Vanila JS & ES6
-                                    </br>- Vue.js 없이 Javascript만으로 SPA(Single Page Application)를 만들었습니다. </br>&nbsp;&nbsp;다시 고친다면 프레임워크를 사용하여 더 신경써야할 부분에 에너지를 써서 완성도를 높히고, XmlHttpRequest의 onprogress속성을 사용하여 정확한 다운로드 진행률을 보여줄 계획입니다.
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                                <div class="portfolio-item-text">
+                                                    Vanila JS & ES6
+                                                </br>- Vue.js 없이 Javascript만으로 SPA(Single Page Application)를 만들었습니다. </br>&nbsp;&nbsp;다시 고친다면 프레임워크를 사용하여 더 신경써야할 부분에 에너지를 써서 완성도를 높히고, XmlHttpRequest의 onprogress속성을 사용하여 정확한 다운로드 진행률을 보여줄 계획입니다.
+                                                </div>
+                                            </ol>
+                                            <ol>
+                                                <i class="fa-regular fa-keyboard portfolio-icon"></i>
 
-                                    <div class="portfolio-item-text">
-                                        SCSS
-                                    </div>
-                                </ol>
-                                <ol>
-                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                                <div class="portfolio-item-text">
+                                                    SCSS
+                                                </div>
+                                            </ol>
+                                            <ol>
+                                                <i class="fa-regular fa-keyboard portfolio-icon"></i>
 
-                                    <div class="portfolio-item-text">
-                                        Rest API by Javascript for use of getting data
+                                                <div class="portfolio-item-text">
+                                                    Rest API by Javascript for use of getting data
+                                                </div>
+                                            </ol>
+
+                                        </li>
+                                    </ul>
+                                    
+                                    <div class="portfolio-details-view-link">
+                                        <a class="button" href="https://github.com/IT-magician/SSAFY_CRAFTS/tree/main/2%EB%B2%88%EC%A7%B8%20%EA%B4%80%ED%86%B5">보러가기</a>
                                     </div>
-                                </ol>
-                                <div class="portfolio-details-view-link">
-                                    <a class="button" href="https://github.com/IT-magician/SSAFY_CRAFTS/tree/main/2%EB%B2%88%EC%A7%B8%20%EA%B4%80%ED%86%B5">보러가기</a>
                                 </div>
                             </li>
-                            <li>
+                            <li class="portfolio-details z-index" --z-index="300">
                                 <h4>version3</h4>
                                 <div class="portfolio-details-view-link">
                                     <a class="button" href="https://github.com/IT-magician/SSAFY_CRAFTS/tree/main/3%EB%B2%88%EC%A7%B8%20%EA%B4%80%ED%86%B5">보러가기</a>
                                 </div>
                             </li>
-                            <li>
+                            <li class="portfolio-details z-index" --z-index="400">
                                 <h4>version4</h4>
                                 <div class="portfolio-details-view-link">
                                     <a class="button" href="https://github.com/IT-magician/SSAFY_CRAFTS/tree/main/4%EB%B2%88%EC%A7%B8%20%EA%B4%80%ED%86%B5">보러가기</a>
                                 </div>
                             </li>
-                            <li>
+                            <li class="portfolio-details z-index" --z-index="500">
                                 <h4>version5</h4>
                                 <div class="portfolio-details-view-link">
                                     <a class="button" href="https://github.com/IT-magician/SSAFY_CRAFTS/tree/main/5%EB%B2%88%EC%A7%B8%20%EA%B4%80%ED%86%B5">보러가기</a>
@@ -711,10 +731,6 @@
                             <div class="portfolio-details-view-img">
                                 <img src="./asset/img/cloud_cctv1.png">
                             </div>
-                            <div class="portfolio-details-view-img">
-                                <img src="./asset/img/cloud_cctv2.png">
-                            </div>
-
 
                             <!-- <div class="portfolio-details-view-link">
                                 <a class="button" href="#">보러가기</a>
