--- a/working/index.html
+++ b/working/index.html
@@ -63,7 +63,7 @@
                     <span class="home_greeting">안녕하세요, 저의 이름은</span>
                     <h1 class="home_name">김태훈 <span style="font-size: 1rem;">입니다.</span></h1>
 
-                    <span class="home_profession">Future Embeded & Web Developer</span>
+                    <span class="home_profession">Future Embeded System & Web Developer</span>
                     <!-- <div class="home_btn"><a href="#" download="" class="button">Resume</a></div> -->
                 </div>
 
