--- a/working/index.html
+++ b/working/index.html
@@ -78,7 +78,7 @@
                             class="fa-solid fa-n"></i></a>
                 </div>
 
-                <div class="home_img"><img src="asset/img/me0.png" alt=""></div>
+                <div class="home_img"><img src="asset/img/me0.png" alt="" fetchpriority="high"></div>
             </div>
         </section>
 
@@ -2298,6 +2298,12 @@
         </footer>
     </main>
 
+    <script>
+        window.addEventListener("load", (e) => {
+            if (navigator.userAgent.toLowerCase().indexOf("chrome") == -1)
+                alert("Chrome이 아닌 브라우저는 제대로 동작하지 않을 수 있습니다.")
+        });
+    </script>
     <script src="asset/js/main.js"></script>
     <script src="asset/js/header.js"></script>
 </body>
