iot 스마트홈 동영상 추가함

--- a/working/index.html
+++ b/working/index.html
@@ -1298,10 +1298,50 @@
                     </div>
                     <div class="portfolio-details">
                         <div class="portfolio-details-view">
+
                             <div class="portfolio-details-view-img">
                                 <img src="./asset/img/embeded_computer.jpg">
                             </div>
 
+                            <!--clcd -->
+                            <div class='embed-container'>
+                                <iframe src="https://www.youtube.com/embed/7L7Mgk3pNyY" title="YouTube video player"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+                            <!-- fnd -->
+                            <div class='embed-container'>
+                                <iframe src="https://www.youtube.com/embed/ONvE1gfWzhY" title="YouTube video player"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+                            <!-- dip switch -->
+                            <div class='embed-container'>
+                                <iframe src="https://www.youtube.com/embed/L8KxY5oBEAg" title="YouTube video player"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+                            <!-- led -->
+                            <div class='embed-container'>
+                                <iframe src="https://www.youtube.com/embed/6UxrWTex8ks" title="YouTube video player"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+                            <!-- tact switch -->
+                            <div class='embed-container'>
+                                <iframe src="https://www.youtube.com/embed/YmUqllXGcEk" title="YouTube video player"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
 
                             <div class="portfolio-details-view-link">
                                 <a class="button"
