--- a/working/index.html
+++ b/working/index.html
@@ -432,7 +432,7 @@
                     </div>
                     <div class="portfolio-details">
                         <ul>
-                            <li class="portfolio-details hide-scrollbar is-inner">
+                            <li class="portfolio-details unfold hide-scrollbar is-inner">
                                 <div class="left">
                                     <h4>version2</h4>
                                     <div class="portfolio-details-view">
@@ -572,7 +572,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="portfolio-details hide-scrollbar is-inner">
+                            <li class="portfolio-details unfold hide-scrollbar is-inner">
 
                                 <div class="left">
                                     <h4>version3</h4>
@@ -695,7 +695,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="portfolio-details hide-scrollbar is-inner">
+                            <li class="portfolio-details unfold hide-scrollbar is-inner">
 
                                 <div class="left">
                                     <h4>version4</h4>
@@ -795,7 +795,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="portfolio-details  hide-scrollbar is-inner">
+                            <li class="portfolio-details unfold  hide-scrollbar is-inner">
 
                                 <div class="left">
                                     <h4>version5</h4>
