add : 곹오프로젝트..

--- a/working/index.html
+++ b/working/index.html
@@ -64,7 +64,7 @@
                     <span class="home_greeting">안녕하세요, 저의 이름은</span>
                     <h1 class="home_name">김태훈 <span style="font-size: 1rem;">입니다.</span></h1>
 
-                    <span class="home_profession">Future Embeded System & Web Developer</span>
+                    <span class="home_profession">Future Devops & Web Developer</span>
                     <!-- <div class="home_btn"><a href="#" download="" class="button">Resume</a></div> -->
                 </div>
 
@@ -92,8 +92,8 @@
                     <p class="about_description">
                         <span>
                             안녕하세요</br>
-                            저는 호기심 많은 미래 신입 개발자입니다.</br>
-                            어떻게 하면 사용자가 서비스를 더 편리하게 이용할 수 있을지를 고민하며 최상의 결과를 내도록 하겠습니다.</br>
+                            저는 K8S 등 기술뿐만 아니라 사람들과 소통하며 성장하는 것을 즐기는 개발자입니다..</br>
+                            팀원들과 함께 협업하며, 최상의 결과를 내도록 하겠습니다.</br>
                         </span>
                     </p>
 
@@ -201,10 +201,17 @@
                     <div class="skills_description">Qt, Spring/Spring boot, Vue.js</div>
                 </div>
 
+
+                <div class="skills_data">
+                    <i class="fa-solid fa-palette skills_icon"></i>
+                    <h2 class="pontentiality_title">Infra</h2>
+                    <div class="skills_description">Docker & Docker-compose, Spring Cloud, NGINX, Kubernetes, GCP</div>
+                </div>
+
                 <div class="skills_data">
                     <i class="fa-solid fa-tv skills_icon"></i>
                     <h2 class="pontentiality_title">Web development</h2>
-                    <p class="skills_description">Backend with Spring, JSP, JSTL, Servlet, Mysql</p>
+                    <p class="skills_description">Backend with Spring, JSP, JSTL, Servlet, Mysql, JPA, Elastic Search</p>
                     <p class="skills_description">Frontend with HTML, Javascript, SCSS, Vue.js</p>
                 </div>
 
@@ -235,6 +242,160 @@
 
 
             <div class="portfolio_container bd-grid">
+
+
+                <div class="portfolio_content mix web">
+                    <div class="portfolio_data">
+                        <span class="portfolio_subtitle">Web development</span>
+                        <h2 class="portfolio_title">Playground</h2>
+                        <input type="checkbox" id="detail1">
+                        <label for="detail1" class="button label">View Details</label>
+                    </div>
+                    <div class="portfolio-details">
+                        <div class="portfolio-details-view">
+                            <div class="portfolio-details-view-img">
+                                <img src="https://github.com/IT-magician/playground/raw/develop/gif_files/team_match_automatcing.gif"></img>
+                            </div>
+
+
+                            <div class="portfolio-details-view-link">
+                                <a class="button"
+                                    href="https://github.com/employmentRescue/playground">보러가기</a>
+                            </div>
+                        </div>
+                        <ul>
+                            <li>
+                                <h4>제작동기</h4>
+                                농구 등을 같이 운동하고 싶은 사람은 많으나 마땅한 플랫폼이 없었습니다. 그래서 사용자가 장소, 비슷한 수준의 팀원 등 원하는 조건으로 운동을 지속적으로 할 수 있도록 도와주는 '운동모임 플랫폼'을 제작했습니다. 
+                            </li>
+                            <li>
+                                <h4>결과</h4>
+
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-list-text">
+                                        MSA 아키텍처를 구현을 해보면서, 프로젝트의 규모가 클 수록 개발 난이도를 낮춰준다는 것을 알았습니다.
+                                        또한 어플리케이션들을 분리를 통해 서비스 자체를 중단하지 않고, 수정된 어플리케이션만 내용을 반영하는 무중단 배포의 장점을 느꼈습니다.
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-list-text">
+                                        도커와 Hypervisor의 차이점을 알게 되었습니다.
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-list-text">
+                                        Spring Boot으로 REST API를 작성하면서, JPA와 OAUTH2인증에 대해 알게 되었습니다.
+                                    </div>
+                                </ol>
+                            </li>
+                            <li>
+                                <h4>사용한 기술</h4>
+
+
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+
+                                    <div class="portfolio-item-text">
+                                        Spring Boot
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+
+                                    <div class="portfolio-item-text">
+                                        MySQL
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+
+                                    <div class="portfolio-item-text">
+                                        Spring Data JPA
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+
+                                    <div class="portfolio-item-text">
+                                        Docker & Docker-compose
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+
+                                    <div class="portfolio-item-text">
+                                        Spring Cloud(Gateway, Eureka Server)
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+
+                                    <div class="portfolio-item-text">
+                                        AWS EC2
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+
+                                    <div class="portfolio-item-text">
+                                        Jenkins
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+
+                                    <div class="portfolio-item-text">
+                                        Git & Gitlab
+                                    </div>
+                                </ol>
+                            </li>
+                            <li>
+                                <h4>구성원</h4>
+                                본인 외 5명
+                            </li>
+                            <li>
+                                <h4>담당 역할</h4>
+
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-item-text">
+                                        MSA 아키텍처 설계 및 구축
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-item-text">
+                                        무중단 CI/CD 배포
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-item-text">
+                                        React 웹 프레임워크가 앱애서 실행될 수 있도록, Hybrid App 제작
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-item-text">
+                                        Firebase Cloud Message 백엔드 작성 및 FE 가이드
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-item-text">
+                                        OAUTH2 기반 카카오 소셜 인증 및 사용자 정보 서비스 백엔드 작성
+                                    </div>
+                                </ol>
+                            </li>
+
+                            <li style="width: 100%;height: var(--scroll--mb);visibility: hidden;"></li>
+                            <!-- for scroll bottom margin -->
+                        </ul>
+                    </div>
+                </div>
 
 
                 <div class="portfolio_content mix web">
@@ -2202,6 +2363,13 @@
                         <p class="activities_description">현직자(데엔 개발자, SK, 카카오 등)와 취업준비생으로 이루어진 그룹이며, 매주 7문제를 최소 4개이상 푸는
                             스터디입니다.</br>(난이도는 '골드'를 대상으로 풀고, 22년 하반기 라인, 카카오 코테를 합격하는데 도움이 되었던 것 같습니다. 물론... 운이 따라준것도 있긴
                             할겁니다...)</p>
+                    </div>
+
+                    <div class="activities_content swiper-slide">
+                        <img src="asset/img/award1.jpg" alt="" class="activities_img">
+                        <h3 class="activities_title">삼성청년SW아카데미 수상</h3>
+                        <span class="activities_client">22.05 ~ 현재</span>
+                        <p class="activities_description">삼성청년SW아카데미 공통프로젝트 전국 본선 진출 및 1등 수상</p>
                     </div>
 
                     <div class="activities_content swiper-slide">
