add : 공통 프로젝트 ..ing

--- a/working/index.html
+++ b/working/index.html
@@ -270,7 +270,14 @@
                             </li>
                             <li>
                                 <h4>결과</h4>
-
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-list-text">
+                                        웹 및 앱으로 출시를 했습니다.
+                                        <a href="https://www.b309-playground.com/" style="font-weight: 600;">웹페이지</a>
+                                        <a href="https://play.google.com/store/apps/details?id=com.ssafy.edu.playground&pli=1" style="font-weight: 600;">안드로이드</a>
+                                    </div>
+                                </ol>
                                 <ol>
                                     <i class="fa-regular fa-keyboard portfolio-icon"></i>
                                     <div class="portfolio-list-text">
@@ -287,9 +294,52 @@
                                 <ol>
                                     <i class="fa-regular fa-keyboard portfolio-icon"></i>
                                     <div class="portfolio-list-text">
+                                        git 사용실력이 늘었습니다. </br>
+                                        팀원들과 jira로 git을 연동하기 위해 git 브랜치 전략을 함께 이야기를 했고, 거기에 따라서 git을 사용을 했습니다. </br>
+                                        그러다보니 amend, merge request 등의 git 기능까지도 사용을 하면서 예전보다 실력이 많이 향상되었습니다.
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-list-text">
                                         Spring Boot으로 REST API를 작성하면서, JPA와 OAUTH2인증에 대해 알게 되었습니다.
                                     </div>
                                 </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-list-text">
+                                        데이터를 DB에서 자주 가져와야하는 경우 캐쉬서버로부터 데이터를 가져와야한다는 것을 알게 되었습니다. </br>
+                                        MSA 아키텍처를 컨펌받으로 갔을 때, 컨설턴트님이 채팅서버 부분을 지적한 적이 있습니다. "채팅은 1초만해도 데이터를 엄청 많이 가져오는 것 때문에 DB를 많이 힘들게 한다. 안그래도 DB는 느린데, 이렇게 짜면 현업에서는 DBA한테 혼난다. 다른 방법을 구상해라!"라고 말씀을 해주셨습니다.
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-list-text">
+                                        NoSQL을 왜 사용하는지 알게 되었습니다. </br>
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-list-text">
+                                        Firebase Cloud Message를 사용하는 방법을 알게 되었습니다.
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-list-text">
+                                        JPA에 관한 것을 배울수있었습니다. 예를 들면 '순환참조', 'N+1' 문제 등이 왜 발생하며, 어떻게 해결해야하는지를 배울 수 있었습니다.
+                                    </div>
+                                </ol>
+                                <ol>
+                                    <i class="fa-regular fa-keyboard portfolio-icon"></i>
+                                    <div class="portfolio-list-text">
+                                        웹은 해킹에 항상 노출이 되어있으니 조심해야겠다고 느꼈습니다. </br>
+                                        단순히 교육용 프로젝트이기 때문에 해킹에 별위험이 없다고 생각을 했지만, 실제로 DB나 AWS EC2를 탈취를 당한적이 있었습니다.</br>
+                                        또한 Redis 비밀번호를 설정하지 않았다가 web bot이라는 crawler가 지멋대로 저희의 redis 데이터를 수정했습니다. </br>
+                                        그 후에 DB에 비밀번호를 복잡하게 설정하거나 SSL 적용 등 해킹에 경각심을 가졌습니다.
+                                    </div>
+                                </ol>
+                                
                             </li>
                             <li>
                                 <h4>사용한 기술</h4>
